added contact page + beginning of portfolio page + footer

--- a/src/css/sidebar.scss
+++ b/src/css/sidebar.scss
@@ -3,6 +3,7 @@
     position: fixed;
     height: 100%;
     width: 110px;
+    z-index: 9999;
 }
 
 
@@ -129,4 +130,20 @@ nav {
 .nav-bar ul li svg:hover {
     transition: all .75s ease-out;
     color: #26d0ce;
+}
+
+.portfolioBtn {
+    border: 2px solid #4d4d4e;
+    background: none;
+    color: #4d4d4e;
+    font-size: 20px;
+    margin: 130px 10px 0 10px;
+    padding: 5px;
+}
+
+.portfolioBtn:hover {
+    transition: all .5s ease-out;
+    color: #26d0ce;
+    border: 2px solid #26d0ce;
+    background-color: rgb(12, 12, 12);
 }
