--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,16 @@
 body {
     font-family: 'League Spartan', sans-serif;
 }
+
+footer {
+    position: relative;
+    height: 100px;
+    padding: 10px 0 10px 0;
+    padding-top: 5px;
+    background: #181818;
+}
+
+footer p {
+    position: relative;
+    bottom: 10px;
+}
