--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -6,9 +6,9 @@
 
 .text-zone {
     padding: 14%;
-    padding-bottom: 0;
     width: 60%;
     color: white;
+    margin: -50px 0 0 0;
     display: flex;
     flex-direction: column;
 }
@@ -19,6 +19,7 @@
 
 .text-zone p {
     vertical-align: middle;
+    word-wrap: break-word;
 }
 
 .contact-form {
@@ -104,12 +105,13 @@ textarea {
     background: black;
     float: right;
     width: 100%;
-    height: 100%
+    height: 85%;
+    margin-right: 15px;
 }
 
 .leaflet-container {
     width: 100%;
-    height: 93%;
+    height: 100%;
     position: relative;
 
 }
