--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -5,8 +5,7 @@
 .boxes {
     display: flex;
     justify-content: center;
-    width: 100%;
-
+    /* width: 100%; */
 }
 
 .text {
@@ -21,9 +20,8 @@
     margin: 3%;
     padding: 4%;
     position: relative;
-    border-radius: 5%;
+    border-radius: 20px;
     background: #181818;
-    width: 30%;
     box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
 }
 
@@ -70,18 +68,41 @@
 }
 
 
-@media (max-width: 640px) {}
-
-@media (min-width: 768px) {}
-
-@media (min-width: 1024px) {}
-
-@media (max-width: 1280px) {
+@media (min-width: 250px) {
 
     .frontend ul li,
     .backend ul li {
         width: 100%;
         text-align: center;
+        right: 5%;
+    }
+}
+
+@media (min-width: 640px) {}
+
+@media (min-width: 768px) {
+
+    .frontend ul li,
+    .backend ul li {
+        right: 10%;
+    }
+}
+
+@media (min-width: 1024px) {
+
+    .frontend ul li,
+    .backend ul li {
+        right: 9%;
+    }
+}
+
+@media (min-width: 1280px) {
+
+    .frontend ul li,
+    .backend ul li {
+        right: 9%;
+        width: 50%;
+        /* text-align: left; */
     }
 }
 
