--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,24 +1,25 @@
 .about {
     width: 100%;
     position: relative;
-    padding: 10% 10% 14%;
+    padding: 10% 0 14% 0;
     display: inline-flex;
 }
 
 .about-text {
-    padding-top: 10%;
+    padding-top: 13%;
+    position: relative;
+    left: 3%;
 }
 
 .about h1 {
     color: white;
-    width: 50%;
     font-size: 50px;
     margin-bottom: 15px;
 }
 
 .about p {
     color: white;
-    width: 50%;
+    width: 100%;
     word-wrap: break-word;
     font-size: 20px;
 }
@@ -29,20 +30,17 @@
 
 
 
-/* .pic-container {
+.pic-container {
     position: relative;
     display: flex;
-    width: 50%;
+    width: 100%;
     max-width: 400px;
     height: 500px;
-    right: 10%;
     margin: 0 auto;
 }
 
 .pic {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -50,6 +48,9 @@
     background-repeat: no-repeat;
     -webkit-animation: fade 24s infinite;
     animation: fade 24s infinite;
+    border: 3px solid white;
+    border-radius: 10px;
+    box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
 }
 
 #pic1 {
@@ -109,4 +110,30 @@
     100% {
         opacity: 1;
     }
-} */
+}
+
+
+
+@media (min-width: 250px) {
+
+    .about-text h1,
+    .about-text p {
+        text-align: center;
+    }
+}
+
+@media (min-width: 640px) {}
+
+@media (min-width: 768px) {}
+
+@media (min-width: 1024px) {
+
+    .about-text h1,
+    .about-text p {
+        text-align: left;
+    }
+}
+
+@media (min-width: 1280px) {}
+
+@media (min-width: 1536px) {}
