--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -4,10 +4,6 @@
     flex-direction: column;
 }
 
-.text-zone h1 {
-    font-size: 50px;
-}
-
 .contact-form {
     width: 100%;
     margin-top: 20px;
@@ -92,7 +88,22 @@ textarea {
     width: 100%;
     height: 100%;
     position: relative;
+}
 
+.info-map .tel {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    margin-top: 0;
+}
+
+.info-map .tel:hover {
+    transition: all .25s ease-out;
+    color: #26d0ce;
+}
+
+.info-map h4 {
+    margin-bottom: 0;
 }
 
 
@@ -100,6 +111,10 @@ textarea {
 
     .text-zone {
         padding: 20% 10%14% 10%;
+    }
+
+    .text-zone h1 {
+        font-size: 45px;
     }
 
     .info-map {
@@ -113,7 +128,8 @@ textarea {
     }
 
     .info-map h4,
-    .info-map h5 {
+    .info-map h5,
+    .info-map .tel {
         text-align: center;
     }
 }
@@ -136,11 +152,16 @@ textarea {
     }
 
     .info-map h4,
-    .info-map h5 {
+    .info-map h5,
+    .info-map .tel {
         text-align: left;
     }
 
     .text-zone {
         padding: 14% 10%14% 0;
+    }
+
+    .text-zone h1 {
+        font-size: 50px;
     }
 }
