fixed footer and added platform innovations

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -8,6 +8,7 @@ footer {
     padding: 10px 0 1px 0;
     padding-top: 5px;
     background: #181818;
+    top: 57px;
 }
 
 footer p {
@@ -15,6 +16,7 @@ footer p {
     bottom: 10px;
 }
 
-.container, .text {
+.container,
+.text {
     padding-left: 5%;
 }
