--- a/src/css/sidebar.scss
+++ b/src/css/sidebar.scss
@@ -8,11 +8,11 @@
 }
 
 .sidebarNavLinks {
-    font-size: 20px;
-    text-align: left;
     border-bottom: 1px solid #4d4d4e;
-    margin: 0 10px 10px 10px;
-    padding-bottom: 10px;
+    font-size: 20px;
+    margin: 15px 10px 10px 10px;
+    padding-bottom: 15px;
+    text-align: left;
 }
 
 .sidebarNavLinks svg {
@@ -58,8 +58,7 @@ nav {
     display: block;
     text-align: center;
     position: absolute;
-    height: 210px;
-    top: 50%;
+    top: 45%;
     margin-top: -120px;
     width: 100%;
 
@@ -107,12 +106,13 @@ nav {
 
 .resumeDownload {
     position: relative;
-    top: 73%;
+    top: 57%;
     margin: 0 10px 10px 10px;
     padding-bottom: 10px;
 }
 
 .resumeDownload:hover {
+    cursor: pointer;
 
     a,
     svg {
