--- a/src/css/sidebar.scss
+++ b/src/css/sidebar.scss
@@ -58,7 +58,7 @@ nav {
     display: block;
     text-align: center;
     position: absolute;
-    top: 45%;
+    top: 47%;
     margin-top: -120px;
     width: 100%;
 
@@ -105,10 +105,10 @@ nav {
 }
 
 .resumeDownload {
-    position: relative;
-    top: 57%;
-    margin: 0 10px 10px 10px;
+    margin: 0 10px 10px;
     padding-bottom: 10px;
+    position: relative;
+    top: 70%;
 }
 
 .resumeDownload:hover {
