--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,7 +1,7 @@
 .about {
     width: 100%;
     position: relative;
-    padding: 10% 0 14% 0;
+    padding: 10% 0 0 0;
     display: inline-flex;
 }
 
