--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,17 @@
 body {
-    font-family: 'League Spartan', sans-serif;
     background-color: #111011;
+}
+
+h1,
+h2,
+h3,
+button {
+    font-family: 'League Spartan', sans-serif;
+}
+
+h4,
+p {
+    font-family: 'Quicksand', sans-serif;
 }
 
 footer {
@@ -16,7 +27,6 @@ footer p {
     bottom: 10px;
 }
 
-.container,
-.text {
-    padding-left: 5%;
+.container {
+    padding: 0 5% 0 5%;
 }
