--- a/src/css/sidebar.scss
+++ b/src/css/sidebar.scss
@@ -146,6 +146,8 @@ nav {
         font-size: 35px;
         margin: 10px 20px 0 10px;
         position: absolute;
+        cursor: pointer;
+        z-index: 9998;
     }
 }
 
